# SynUtils

./: .buildinfo  .coverage  .gitignore  README.md  genindex.html  getting_started.html  index.html  lint.sh  objects.inv  plot_analysis.ipynb  pyproject.toml  pytest.sh  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  getting_started.doctree  index.doctree
.github/workflows/: build-doc.yml  publish-package.yml  test-and-lint.yml
Data/: data_embedding.npz
Data/CP/: cp_test.txt
Docs/Analysis/: data_reduction.py  partition_benchmark.py  test_cp.py
Test/: test_misc.py
Test/Fingerprint/: test_fp_calculator.py  test_smiles_featurizer.py  test_transformation_fp.py
Test/Partition/: test_data_partition.py  test_random_partition.py  test_stratified_parition.py  test_stratified_reduction_partition.py
Test/SynAAM/: test_aam_validator.py  test_inference.py  test_its_construction.py  test_normalize_aam.py  test_partial_expand.py
Test/SynGraph/: test_graph_descriptors.py
Test/SynSplit/: test_data_split.py  test_random_split.py  test_rc_split.py  test_stratified_reduction_split.py  test_stratified_split.py
Test/SynVis/: test_embedding.py
Test/Uncertainty/: test_conformal_predictor.py
Test/Visualization/: test_embedding.py
Test/synsplit/: test_data_split.py  test_random_split.py  test_rc_split.py  test_stratified_reduction_split.py  test_stratified_split.py
Test/synvis/: test_embedding.py
_sources/: index.rst.txt
doc/: conf.py  getting_started.rst
synutility/: misc.py
synutility/Fingerprint/: fp_calculator.py  transformation_fp.py
synutility/Partition/: data_partition.py  stratified_reduction_partition.py
synutility/SynAAM/: aam_validator.py  inference.py  its_builder.py  its_construction.py  misc.py  normalize_aam.py  partial_expand.py
synutility/SynGraph/: graph_descriptors.py
synutility/SynIO/: data_type.py  debug.py
synutility/SynMOD/: rule_apply.py
synutils/: utils.py
(+89 files in other folders)
