[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synutility"
version = "0.0.5"
authors = [
    {name="Tieu Long Phan", email="tieu@bioinf.uni-leipzig.de"}
]
description = "Graph-based reaction templates extraction"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "scikit-learn==1.5.1",
    "pandas>=1.5.3",
    "rdkit>=2024.3.3",
    "networkx==3.3",
    "seaborn==0.13.2",
]

[project.optional-dependencies]
all = ["drfp==0.3.6", "xgboost==2.1.1"]

[project.urls]
homepage = "https://github.com/TieuLongPhan/SynUtils"
source = "https://github.com/TieuLongPhan/SynUtils"
issues = "https://github.com/TieuLongPhan/SynUtils/issues"